--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,51 @@
+* {
+  font-family: 'Eagle Lake', cursive;
+}
+
 h2 {
   font-weight: bold;
 }
 body {
   background-color: #d5a560;
 }
+#bardTale {
+  display: none;
+  padding: 20px;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+#bardImage {
+  margin-right: 5px;
+  padding-left: 50px;
+}
+
+#raiseCol {
+  height: 200px;
+  padding-top: 90px;
+}
+#bardImage img{
+  height: 200px;
+  width: auto;
+  border-radius: 100px;
+  margin-top: 20px;
+}
+#backStoryColumn {
+  height: 800px;
+  background-image: url("../images/scrolls.png");
+  border: 2px solid red;
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 120px;
+}
+
+#startButton {
+  display: none;
+
+}
 
 #startContainer {
   width: 100%;
   height: 100%;
-
 }
 
 #mapContainer {
@@ -30,6 +67,3 @@ body {
 #characterContainer, #mapContainer {
   display: none;
 }
-
-
-/*testetesestesestestesestesestestesestse*/
