media query to adjust bard page for mobile viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
   padding: 20px;
   margin-top: 20px;
   margin-left: 10px;
+  font-size: 25px;
 }
 #bardImage {
   margin-right: 5px;
@@ -23,6 +24,7 @@ body {
   height: 200px;
   padding-top: 90px;
 }
+
 #bardImage img{
   height: 200px;
   width: auto;
@@ -66,4 +68,50 @@ body {
 
 #characterContainer, #mapContainer {
   display: none;
+}
+
+@media screen and (max-width:  441px)  {
+  * {
+    text-align: center;
+  }
+
+  h1 {
+    float: right;
+    font-size: 20px;
+    padding-right: 20px;
+  }
+
+  #bardTale {
+    display: none;
+    padding: 0px;
+    margin-top: 0px;
+    margin-left: 0px;
+    font-size: 10px;
+  }
+  #bardImage {
+    margin-right: 0px;
+    padding-left: 0px;
+  }
+
+  #raiseCol {
+    height: 0px;
+    padding-top: 0px;
+  }
+
+  #bardImage img{
+    height: 80px;
+    width: auto;
+    border-radius: 100px;
+    margin-top: 0px;
+    float: left;
+  }
+
+  #backStoryColumn {
+    height: 350px;
+    background-image: url("../images/scrolls.png");
+    border: 2px solid red;
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 60px;
+  }
 }
