--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 h2 {
   font-weight: bold;
 }
+
 body {
   background-color: #d5a560;
 }
@@ -8,16 +9,7 @@ body {
 #startContainer {
   width: 100%;
   height: 100%;
-
 }
-
-#mapContainer {
-  background-image: url("../images/map.png");
-  background-repeat: no-repeat;
-  background-attachment: contain;
-  height: 1000px;
-}
-
 #bardColumn {
   background-image: url("../images/bard.jpg");
   height: 600px;
@@ -26,10 +18,91 @@ body {
   padding-top: 15px;
   padding-left: 20px;
 }
-
-#characterContainer, #mapContainer {
+#characterContainer, #startContainer {
   display: none;
 }
+#mapContainer {
+  background-image: url("../images/map.png");
+  background-repeat: no-repeat;
+  background-attachment: contain;
+  height: 1000px;
+  overflow: hidden;
+}
+#mapRow1 {
 
+}
+#mapRow2 {
 
-/*testetesestesestestesestesestestesestse*/
+}
+#mapRow3 {
+
+}
+#mapRow4 {
+
+}
+#mapRow1Column1 {
+
+}
+#mapRow1Column2 {
+  text-align: right;
+  /*border: 1px solid yellow;*/
+}
+#mapRow2Column1 {
+  text-align: center;
+  /*border: 1px solid yellow;*/
+}
+#mapRow2Column2 {
+  text-align: center;
+  margin-top: 120px;
+  padding-right: 50px;
+  /*border: 1px solid yellow;*/
+}
+#mapRow3Column1 {
+  margin-top: 90px;
+  padding-left: 0px;
+  /*border: 1px solid yellow;*/
+}
+#mapRow3Column2 {
+  text-align: center;
+  margin-top: 40px;
+  /*border: 1px solid yellow;*/
+}
+#mapRow3Column3 {
+  text-align: right;
+  padding-right: 50px;
+  margin-top: -15px;
+  padding-bottom: 30px;
+  /*border: 1px solid yellow;*/
+}
+#mapRow4Column1 {
+  text-align: center;
+  margin-top: 85px;
+  padding-left: 120px;
+  /*border: 1px solid yellow;*/
+}
+.mapLocations {
+  max-width: 220px;
+}
+#oceanCastle {
+  max-width: none;
+  width: 250px;
+}
+#village {
+  width: 200px;
+}
+#houseOverWater {
+  width: 150px;
+}
+#ghostHouse {
+  width: 90px;
+}
+#boat {
+  width: 90px;
+  /*transform: rotate(45deg);*/
+}
+#tower {
+
+}
+#ufo {
+  width: 200px;
+}
