--- a/css/styles.css
+++ b/css/styles.css
@@ -35,14 +35,17 @@ body {
   height: 200px;
   width: auto;
   border-radius: 100px;
-  margin-top: 23px;
+  margin-top: 28px;
   margin-left: 900px;
+  border-width: thick;
+  border-style: double;
+  border-color: black;
 }
 
 #moveBardTitle {
   padding-right: 200px;
   padding-top: 110px;
-
+  text-align: left;
 }
 
 #moveCharacterTitle {
@@ -60,7 +63,6 @@ body {
   height: 1000px;
   width: auto;
   background: url("../images/scrolls.png");
-  border: 2px solid red;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -70,7 +72,6 @@ body {
   height: 1200px;
   width: auto;
   background: url("../images/scrolls.png");
-  border: 2px solid red;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
