--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,13 @@ body {
   border-radius: 20px;
 }
 
+.bossStyle {
+  width: 800px;
+  height: auto;
+  margin-left: 300px;
+  margin-top: 300px;
+}
+
 /*/////location buttons*/
 
 #gameStart{
